--- a/Snake/snake.html
+++ b/Snake/snake.html
@@ -11,6 +11,7 @@
             }
         </style>
         <script src="p5.js"></script>
+        <script src="p5.sound.min.js"></script>
         <script src="sketch.js"></script>
         <script src="snake.js"></script>
     </head>
