--- a/Snake/snake.html
+++ b/Snake/snake.html
@@ -16,6 +16,7 @@
         <script src="snake.js"></script>
     </head>
     <body>
-        
+        <p>Hey</p>
+        <div id="game_window"></div>
     </body>
 </html>
