game window created

--- a/Snake/snake.html
+++ b/Snake/snake.html
@@ -16,6 +16,8 @@
         <script src="snake.js"></script>
     </head>
     <body>
-        
+        <p>Here is my sketch:</p>
+        <div id="game_window"></div>
+        <p>Pretty cool, eh?</p>
     </body>
 </html>
