--- a/Snake/snake.html
+++ b/Snake/snake.html
@@ -6,8 +6,8 @@
         <title>Snake Game</title>
         <style>
             body {
-              padding: 0;
-              margin: 0;
+                background-image: url("https://wallpapercave.com/wp/wp2409705.jpg");
+                background-repeat: no-repeat;
             }
         </style>
         <script src="p5.js"></script>
