--- a/Snake/snake.html
+++ b/Snake/snake.html
@@ -9,6 +9,10 @@
                 background-image: url("https://wallpapercave.com/wp/wp2409705.jpg");
                 background-repeat: no-repeat;
             }
+
+            #game_window{
+                justify-content: center;
+            }
         </style>
         <script src="p5.js"></script>
         <script src="p5.sound.min.js"></script>
@@ -16,8 +20,8 @@
         <script src="snake.js"></script>
     </head>
     <body>
-        <p>Here is my sketch:</p>
+        <div class="head"><p>Here is my sketch:</p></div>
         <div id="game_window"></div>
-        <p>Pretty cool, eh?</p>
+        <div class="tail"><p>Pretty cool, eh?</p></div>
     </body>
 </html>
