score window added

--- a/Snake/snake.html
+++ b/Snake/snake.html
@@ -20,8 +20,8 @@
         <script src="snake.js"></script>
     </head>
     <body>
-        <div class="head"><p>Here is my sketch:</p></div>
+        <div class="head"><h2 style="justify-content: center;">Snake Game</h2></div>
         <div id="game_window"></div>
-        <div class="tail"><p>Pretty cool, eh?</p></div>
+        <div class="gamescore" id="scoreTab" style="display: none;"><h3 style="justify-content: center;">Your final score is: <p id="demo"></p></h3></div>
     </body>
 </html>
