--- a/Snake/snake.html
+++ b/Snake/snake.html
@@ -21,7 +21,7 @@
     </head>
     <body>
         <div class="head"><h2 style="text-align: center;">Snake Game</h2></div>
-        <div id="game_window"></div>
+        <div id="game_window" style="text-align: center;"></div>
         <div class="gamescore" id="scoreTab" style="display: none;"><h3 style="text-align: center;">Your final score is: <p id="demo"></p></h3></div>
     </body>
 </html>
