--- a/Snake/snake.html
+++ b/Snake/snake.html
@@ -19,8 +19,9 @@
     </head>
     <body>
         <div class="head"><h1 style="text-align: center;">Snake Game</h1></div>
+        <div class="gamescore" id="scoreTab" style="display: none;"><h2 style="text-align: center;">Game Over!!!</h2><p id="demo">Your final score is: </p></h2></div>
         <div id="game_window" style="text-align: center;"></div>
-        <div class="gamescore" id="scoreTab" style="display: none;"><h3 style="text-align: center;">Your final score is: <p id="demo"></p></h3></div>
+        
     
         <script src="sketch.js"></script>
         <script src="snake.js"></script>
