--- a/Snake/snake.html
+++ b/Snake/snake.html
@@ -19,7 +19,11 @@
     </head>
     <body>
         <div class="head"><h1 style="text-align: center;">Snake Game</h1></div>
-        <div class="gamescore" id="scoreTab" style="display: none;"><h2 style="text-align: center;">Game Over!!!</h2><p id="demo">Your final score is: </p></h2></div>
+        <div class="gamescore" id="scoreTab" style="display: none;">
+            <h2 style="text-align: center;">Game Over!!!</h2>
+            <h2 id="demo" style="text-align: center;">Your final score is: </h2>
+            <div id="reloader" style="text-align: center;"></div>
+        </div>
         <div id="game_window" style="text-align: center;"></div>
         
     
