--- a/Snake/snake.html
+++ b/Snake/snake.html
@@ -16,13 +16,21 @@
         </style>
         <script src="p5.js"></script>
         <script src="p5.sound.min.js"></script>
+        <script>
+            function ReloadGame() {
+                window.location.reload();
+            }
+        </script>
     </head>
     <body>
         <div class="head"><h1 style="text-align: center;">Snake Game</h1></div>
         <div class="gamescore" id="scoreTab" style="display: none;">
             <h2 style="text-align: center;">Game Over!!!</h2>
             <h2 id="demo" style="text-align: center;">Your final score is: </h2>
-            <div id="reloader" style="text-align: center;"></div>
+            <div id="reloader" style="text-align: center;">
+                <button type='button' onclick='ReloadGame()'>Play Again</button>
+                <br>
+            </div>
         </div>
         <div id="game_window" style="text-align: center;"></div>
         
