--- a/Snake/snake.html
+++ b/Snake/snake.html
@@ -27,7 +27,7 @@
         <div class="gamescore" id="scoreTab" style="display: none;">
             <h2 style="text-align: center;">Game Over!!!</h2>
             <h2 id="demo" style="text-align: center;">Your final score is: </h2>
-            <div id="reloader" style="text-align: center;">
+            <div style="text-align: center;">
                 <button type='button' onclick='ReloadGame()'>Play Again</button>
                 <br>
             </div>
