--- a/Snake/snake.html
+++ b/Snake/snake.html
@@ -16,6 +16,8 @@
         </style>
         <script src="p5.js"></script>
         <script src="p5.sound.min.js"></script>
+        <script src="sketch.js"></script>
+        <script src="snake.js"></script>
         <script>
             var TotalScore = 0;
 
