--- a/Snake/snake.html
+++ b/Snake/snake.html
@@ -16,19 +16,10 @@
         </style>
         <script src="p5.js"></script>
         <script src="p5.sound.min.js"></script>
-        <script src="sketch.js"></script>
-        <script src="snake.js"></script>
         <script>
             var TotalScore = 0;
-
             function ReloadGame() {
-                speed = 7.0;
-                musicSpeed = 1.0;
-                TotalScore = 0;
-                redraw();
-                s = new Snake();
-                frameRate(speed);
-                pick_food_location();    
+                window.location.reload();
             }
         </script>
     </head>
