--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     </head>
     <body>
         <a href="./Snake/snake.html"><p>snake</p></a>
+        <br>
+        <a href="./Flappy/flappy.html"><p>snake</p></a>
     </body>
 </html>
