--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <body>
         <a href="./Snake/snake.html"><p>snake</p></a>
         <br>
-        <a href="./Flappy/flappy.html"><p>snake</p></a>
+        <a href="./Flappy/flappy.html"><p>flappy</p></a>
     </body>
 </html>
