game welcome screen

--- a/Snake/snake.html
+++ b/Snake/snake.html
@@ -8,6 +8,7 @@
             body {
                 background-image: url("https://wallpapercave.com/wp/wp2409705.jpg");
                 background-repeat: no-repeat;
+                background-size: cover;
             }
 
             #game_window{
