--- a/Snake/snake.html
+++ b/Snake/snake.html
@@ -16,6 +16,7 @@
             }
         </style>
         <script src="p5.js"></script>
+        <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
         <script src="p5.sound.min.js"></script>
         <script>
             var TotalScore = 0;
